health bars reflect damage taken. slide bug squashed

--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,9 @@ canvas {
 }
 
 .health-bar {
-    width: 300px;
     height: 20px;
+    width: 300px;
     background-color: red;
     border: 2px solid black;
-    transition: width 0.2s ease-in-out;
+    transition: width 0.3s ease-in-out;
 }
